--- a/Meditation/View/SignIn.storyboard
+++ b/Meditation/View/SignIn.storyboard
@@ -132,10 +132,10 @@
             </objects>
             <point key="canvasLocation" x="47.826086956521742" y="45.535714285714285"/>
         </scene>
-        <!--MainScreen-->
+        <!--Main-->
         <scene sceneID="3Bs-CV-lpS">
             <objects>
-                <viewControllerPlaceholder storyboardName="MainScreen" id="Mku-gm-SZc" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Main" id="Mku-gm-SZc" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fc9-iI-TvT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="735" y="-66"/>
@@ -178,10 +178,10 @@
             <color red="0.48600000143051147" green="0.60399997234344482" blue="0.57300001382827759" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="TextFieldBottomLineColor">
-            <color red="0.74509803921568629" green="0.76078431372549016" blue="0.76078431372549016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.74500000476837158" green="0.76099997758865356" blue="0.76099997758865356" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="TextFieldPlaceholderColor">
-            <color red="0.74509803921568629" green="0.76078431372549016" blue="0.76078431372549016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.74500000476837158" green="0.76099997758865356" blue="0.76099997758865356" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="WhiteLabelTextColor">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
